# log_beautifier

./: .gitignore  Cargo.toml  README.md
.github/scripts/: create_issues.py
.github/workflows/: Rust.yaml
src/: arg_parser.rs  main.rs
