[package]
name = "log_beautifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.8.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
